Bug 128824 - Style list loses multi selection on right click
Summary: Style list loses multi selection on right click
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2019-11-16 00:33 UTC by Jim Raykowski
Modified: 2019-12-15 12:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2019-11-16 00:33:48 UTC
Multiple selection is possible when style list is other than Hierarchical. Right mouse button click to activate context menu unselects multiple selection.

Steps to repro:

1) Open Writer
2) Open Styles Manager with F11 or Menu>Styles>Manage Files
3) Select any filter other than Hierarchical from the filter drop down
4) Select mutiple styles with shift left mouse click or shift up/down arrow
5) Right click on any of the selected styles

Results: multiple selection is lost and context menu is displayed

Expected behavior: multiple selection remains and context menu is displayed

Additional information: Commit c554afd565ea515decd483a9068f6590c5316dce changed this behavior.
Comment 1 Dieter 2019-11-16 06:50:51 UTC
I confirm it with

Version: 6.4.0.0.beta1 (x64)
Build ID: 4d7e5b0c40ed843384704eca3ce21981d4e98920
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-11-19 12:44:29 UTC
In

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

it's not possible to do multiselection...
Comment 3 Xisco Faulí 2019-11-19 12:49:02 UTC
Not reproducible in

Version: 6.1.0.0.alpha1+
Build ID: 3a801799536e6870f2fb111b1cc00b9575a35a39
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 4 raal 2019-12-08 19:46:18 UTC
This seems to have begun at the below commit.
Adding Cc: to Samuel Mehrbrodt ; Could you possibly take a look at this one?
Thanks
 3b5b82de5ed033d9761a9fb1c43b24bea6885d7d is the first bad commit
commit 3b5b82de5ed033d9761a9fb1c43b24bea6885d7d
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Jul 8 10:37:50 2019 +0200

    source c554afd565ea515decd483a9068f6590c5316dce

author	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2019-07-05 12:40:16 +0200
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2019-07-08 10:01:18 +0200
commit c554afd565ea515decd483a9068f6590c5316dce (patch)
tree 4afacc45ac4eb1dd2f46cc0032c21a97f25f9c7c
parent 49422a469646ad8be43ba828ca24c2484c26b9e8 (diff)
Right clicking in text should move the cursor
Comment 5 Commit Notification 2019-12-11 12:50:40 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/13966121b49369950f2c214f3ab109fbad0386ad

tdf#128824 Keep multiselection in style list on right click

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-12-12 16:41:03 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/9ed66c205d57093dccafa3d16fba7ddd0a109ba6

tdf#128824 Keep multiselection in style list on right click

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Dieter 2019-12-15 12:36:32 UTC
Verfified with

Version: 6.5.0.0.alpha0+ (x64)
Build ID: e26d89371f0e4f41476c9a99be01d98dedb76776
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: threaded

Samuel, thanks for fixing it!