tdf#128824 Keep multiselection in style list on right click

Change-Id: I196f8c7d3a1a0b3267498f6cde55069ba3a60523