vcl/source/treelist/svimpbox.cxx
@@ -2070,7 +2070,8 @@ void SvImpLBox::MouseButtonDown( const MouseEvent& rMEvt )
             return;
         // Inplace-Editing?
     }
-    if ( m_aSelEng.GetSelectionMode() != SelectionMode::NONE )
+    if ( m_aSelEng.GetSelectionMode() != SelectionMode::NONE
+         && !rMEvt.IsRight() ) // tdf#128824
         m_aSelEng.SelMouseButtonDown( rMEvt );
 }
 
